fix: ensure api objects are versioned
